@@ -6,7 +6,7 @@
  *  based on BOOM, a modified and improved DOOM engine
  *  Copyright (C) 1999 by
  *  id Software, Chi Hoang, Lee Killough, Jim Flynn, Rand Phares, Ty Halderman
- *  Copyright (C) 1999-2000 by
+ *  Copyright (C) 1999-2006 by
  *  Jess Haas, Nicolas Kalkhof, Colin Phipps, Florian Schulze
  *
  *  This program is free software; you can redistribute it and/or
@@ -71,10 +71,10 @@ typedef unsigned __int64 uint_64_t;
 
 /* cph - move compatibility levels here so we can use them in d_server.c */
 typedef enum {
-  doom_12_compatibility, /* Behave like early doom versions */
-  doom_demo_compatibility, /* As compatible as possible for
-          * playing original Doom demos */
-  doom_compatibility,      /* Compatible with original Doom levels */
+  doom_12_compatibility,   /* Doom v1.2 */
+  doom_1666_compatibility, /* Doom v1.666 */
+  doom2_19_compatibility,  /* Doom 2 v1.9 */
+  finaldoom_compatibility,     /* Final & Ultimate Doom v1.9, and Doom95 */
   boom_compatibility_compatibility,      /* Boom's compatibility mode */
   boom_201_compatibility,                /* Compatible with Boom v2.01 */
   boom_202_compatibility,                /* Compatible with Boom v2.01 */
@@ -82,11 +82,13 @@ typedef enum {
   mbf_compatibility,                     /* MBF */
   prboom_1_compatibility,                /* PrBoom 2.03beta? */
   prboom_2_compatibility,                /* PrBoom 2.1.0-2.1.1 */
-  prboom_3_compatibility,                /* Latest PrBoom */
+  prboom_3_compatibility,                /* PrBoom 2.2.x */
+  prboom_4_compatibility,                /* PrBoom 2.3.x */
+  prboom_5_compatibility,                /* Latest PrBoom */
   MAX_COMPATIBILITY_LEVEL,               /* Must be last entry */
   /* Aliases follow */
   boom_compatibility = boom_201_compatibility, /* Alias used by G_Compatibility */
-  best_compatibility = prboom_3_compatibility,
+  best_compatibility = prboom_5_compatibility,
 } complevel_t;
 
 #endif
